# python

./: .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: .pages  CNAME  index.md
docs/.overrides/: main.html
docs/basics/: .pages  arithmetic.ipynb  functions.ipynb  index.md
docs/basics/arithmetic/: index.ipynb
docs/basics/collections/: .pages  dict.ipynb  index.ipynb  list.ipynb  tuple.ipynb
docs/basics/comments/: index.ipynb
docs/basics/conditionals/: index.ipynb
docs/basics/data-types/: .pages  bool.ipynb  index.ipynb  none.ipynb  numeric.ipynb  string.ipynb
docs/basics/data-types/numeric/: .pages  float.ipynb  index.ipynb  int.ipynb
docs/basics/display/: index.ipynb
docs/basics/functions/: .pages  body.ipynb  calling.ipynb  index.ipynb  pysnack.ipynb  what.ipynb
docs/basics/loops/: .pages  for.ipynb  index.ipynb  range.ipynb  while.ipynb
docs/basics/printing/: index.ipynb
docs/basics/variables/: .pages  assignment.ipynb  exercises.ipynb  index.ipynb  multiple.ipynb  naming.ipynb
docs/css/: base.css
docs/data/: .pages  numpy.ipynb  pandas.ipynb
docs/data/numpy/: .pages  dimensions.ipynb  dtype.ipynb  index.ipynb  indexing.ipynb  initialize.ipynb  loading.ipynb  motivation.ipynb  ndarray.ipynb  numpy.ipynb  shape.ipynb
docs/external-references/byte-of-python/: 1-about-python.ipynb  11-oop.ipynb  13-exceptions.ipynb  15-more.ipynb  7-functions.ipynb  8-modules.ipynb  index.md
docs/external-references/think-python/: 1-the-way-of-the-program.ipynb  2-variables-expressions-statements.ipynb  3-functions.ipynb  4-case-study-interface-design.ipynb  README.md
docs/files/csv/: coimbra_breast_cancer_dataset.csv
docs/files/npy/: steamboat-willie.npy
docs/getting-started/: .pages  index.md
docs/getting-started/colab/: index.md
docs/getting-started/colab/kernel/: index.md
docs/getting-started/colab/opening-files/: index.md
docs/getting-started/colab/reproducibility/: index.md
docs/getting-started/run/: .pages
docs/intro/: .pages  index.md
docs/intro/colab/: .pages
docs/intro/colab/cells/: index.md
docs/intro/run/: .pages
docs/objects/: .pages  index.md
docs/oo/: .pages  index.md
docs/plotting/: .pages
